--- a/CORPSE/data/Tables/TODO.txt
+++ b/CORPSE/data/Tables/TODO.txt
@@ -4,3 +4,4 @@
 3  The carpet gives out an aura of homeliness, which might cause creatures near it to refrain from violence and feel relaxed and safe. The longer the carpet has stayed, unrolled, in the one place, the more likely it is to work.
 4  The design on the carpet changes, giving warnings and clues.
 
+dungeon map images: http://meta-studios.com/dg/dunmap.html?utm_content=bufferfa2ec&utm_medium=social&utm_source=facebook.com&utm_campaign=buffer
